[package]
name = "kyo"
description = "2d GUI application framework for wayland, built on top of hej, nux and smithay-client-toolkit."
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
hej.workspace = true
chii.workspace = true

eyre.workspace = true
tokio.workspace = true
tracing.workspace = true

raw-window-handle.workspace = true
smithay-client-toolkit.workspace = true
wayland-client.workspace = true
wayland-backend.workspace = true
